Fixed footer misalignment and page nav

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -145,6 +145,11 @@
   .links {
     flex: 0 0 50%;
     align-items: flex-start;
+    .link-column {
+      .header {
+        text-align: left;
+      }
+    }
   }
 
   .links:last-child {
